fix: remove `-webkit-overflow-scrolling: touch` (#376)

--- a/packages/skin/src/sass/carousel/carousel.scss
+++ b/packages/skin/src/sass/carousel/carousel.scss
@@ -247,7 +247,6 @@ span.carousel__container {
         .carousel__list {
             /* Add transition on border-color in order to support fade in/out of scrollbar */
             border-color: rgb(0 0 0 / 0);
-            -webkit-overflow-scrolling: touch;
             overflow-x: auto; /* also used in js to determine scroll behavior */
             overflow-y: hidden;
             padding-bottom: 10px;
