--- a/packages/skin/src/sass/drawer-dialog/drawer-dialog.scss
+++ b/packages/skin/src/sass/drawer-dialog/drawer-dialog.scss
@@ -90,7 +90,6 @@ button.icon-btn.drawer-dialog__close {
     border-radius: var(--border-radius-100) var(--border-radius-100) 0 0;
     max-height: 50%;
     max-width: 100%;
-    -webkit-overflow-scrolling: touch;
     overflow-y: hidden;
 }
 
