--- a/packages/skin/src/sass/panel-dialog/panel-dialog.scss
+++ b/packages/skin/src/sass/panel-dialog/panel-dialog.scss
@@ -16,7 +16,6 @@
     @include dialog-mixins.window;
 
     border-right: 1px solid rgb(153 153 153 / 0.18);
-    -webkit-overflow-scrolling: touch;
     overflow-y: auto;
     width: 100%;
 }
